Fixed overflowing in mobile view

--- a/assets/mystyle.css
+++ b/assets/mystyle.css
@@ -11,6 +11,7 @@
 }
 body *{
     font-family: Roboto, Arial, sans-serif;
+    overflow-y: hidden;
 }
 body{
     overflow-x: hidden;
